build/resources/test/Fall_21_Test_Cases/Good/LO-1/lvl1-good-easy-km.lo
//good case

int a, b;
{
a = 5;
if ( (a > 2) )
{
a = 10;
}
else
{
a = 0;
}
}