build/resources/test/Fall_21_Test_Cases/Bad/LO-0/lvl0-bad-medium-km.lo
//bad testcase 
//invalid variable declaration
int i, j,;
String b;
{
i = 0;
b = true;
;
}